--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "vform": "^1.0.1",
         "vue-notification": "^1.3.20",
         "vue-progressbar": "^0.7.5",
-        "vue-snotify": "^3.2.1"
+        "vue-snotify": "^3.2.1",
+        "vue-toasted": "^1.1.27"
     }
 }
